--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>TesteTecnico</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-# frozen_string_literal: true
-csrf_meta_tags
- %>
-# frozen_string_literal: true
-csp_meta_tag
- %>
-
-# frozen_string_literal: true
-stylesheet_link_tag 'application', "data-turbo-track": 'reload'
- %>
-# frozen_string_literal: true
-stylesheet_link_tag 'payments', media: 'all'
- %>
-# frozen_string_literal: true
-javascript_importmap_tags
- %>
-  </head>
-
-  <body>
-# frozen_string_literal: true
-yield
- %>
-  </body>
+<head>
+  <title>TesteTecnico</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <%= stylesheet_link_tag 'application', "data-turbo-track": 'reload' %>
+  <%= stylesheet_link_tag 'payments', media: 'all' %>
+  <%= stylesheet_link_tag 'admin', media: 'all' %>
+  <%= javascript_importmap_tags %>
+</head>
+<body>
+  <%= yield %>
+</body>
 </html>
